[package]
name = "cronbach_alpha_lib"
version = "0.1.0"    # the current version, obeying semver
edition = "2021"
authors = ["Rickhy Siswanto<rickhy@gmail.com>"]
description = "Library for check your reliable question"
readme = "README.md"
repository = "https://github.com/rickhysis/cronbach_alpha_lib"
license = "MIT"
license-file = "LICENSE"
keywords = ["cronbach alpha", "reliable"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
