[package]
name = "cronbach_alpha_lib"
version = "0.1.0"    
edition = "2021"
authors = ["Rickhy Siswanto<rickhy@gmail.com>"]
description = "Library for get cronbach alpha value to check your reliable question"
readme = "README.md"
repository = "https://github.com/rickhysis/cronbach_alpha_lib"
license = "MIT"
keywords = ["cronbach alpha", "reliable"]
categories = ["science","mathematics","statistics"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
